--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="min-height: 100vh;">
                   
-                    <video class="position-absolute w-100 h-100" src="/spa-html-template/img/jh academy.mp4" style="object-fit: cover;" autoplay muted loop></video>
+                    <video class="position-absolute w-100 h-100" src="/img/jh academy.mp4" style="object-fit: cover;" autoplay muted loop></video>
                     
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
